--- a/index.html
+++ b/index.html
@@ -211,53 +211,78 @@
             </p>
             <ul class="desc-index">
               <li><a href="#">
-                  <p class="br">GENTLE
-                    MONSTER</p>
-                  <div class="summary"><b>jquery / Cube / Swiper</b>
+                  <p class="br">젠틀몬스터의 선글라스 제품을 소개하는 페이지로<br> cube를 활용한 레이아웃입니다.</p>
+                  <div class="summary">
+                    <b>jquery / Cube / Swiper</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
-                  <p>HEINEKEN</p>
+                  <p>skew를 활용해 메뉴를 만들고<br> 리디자인한 사이트입니다.</p>
                   <div class="summary"><b>transform</b>
                   </div>
-                </a></li>
-              <li><a href="#">
-                  <p>MARIO</p>
+                </a>
+              </li>
+              <li><a href="#" class="on">
+                  <p>마리오 게임의 특징을 살리며 
+                    만든 사이트입니다.
+                  </p>
                   <div class="summary">
                     <b>jquery / 반응형</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a></li>
-              <li><a href="#">
-                  <p>APPLE</p>
+              <li>
+                <a href="#">
+                  <p>아코디언페이지 구성으로 재해석한 사이트입니다. </p>
                   <div class="summary">
                     <b>js / accordion / Swiper</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
-                  <p>ACE BED</p>
-                  <div class="summary"><b>js / Clone / Swiper / 반응형</b>
+                  <p>swiper, jquery, vanilla script로<br> 클론코딩 하였습니다.</p>
+                  <div class="summary">
+                    <b>js / Clone / Swiper / 반응형</b>
+                    <ul class="flex">
+                      <li><img src="./src/assets/phone.png" alt=""></li>
+                      <li><img src="./src/assets/tablet.png" alt=""></li>
+                      <li><img src="./src/assets/computer.png" alt=""></li>
+                    </ul>
                   </div>
                 </a></li>
               <li><a href="#">
-                  <p>LOTTE</p>
+                  <p>롯데칠성음료 홈페이지의 일부를 클론 코딩하였습니다. 음료를 클릭하면 그에 대한 정보들이 나옵니다.</p>
                   <div class="summary"><b>js / Clone</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
-                  <p>YG</p>
+                  <p>grid를 활용한 사이트입니다.</p>
                   <div class="summary"><b>jquery / Grid</b>
                   </div>
                 </a></li>
-              <li class="on"><a href="#">
+              <li><a href="#">
                   <p>CHEONGWADAE</p>
                   <div class="summary"><b>jquery / 반응형</b>
                   </div>
                 </a></li>
               <li><a href="#">
+                  <p>GENESIS</p>
+                  <div class="summary"><b>jquery / Cube / Swiper</b>
+                  </div>
+                </a>
+              </li>
+              <li><a href="#">
                   <p>DISNEY</p>
                   <div class="summary"><b>jquery / Cube / Swiper</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
                   <p>BANYANTREE</p>
                   <div class="summary"><b>jquery</b>
@@ -267,34 +292,175 @@
                   <p>POLO</p>
                   <div class="summary"><b>반응형 / sticky</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
                   <p>CHANEL</p>
                   <div class="summary"><b>반응형</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
-                  <p>DISNEY</p>
+                  <p>GSAP</p>
                   <div class="summary"><b>반응형</b>
                   </div>
-                </a></li>
+                </a>
+              </li>
             </ul>
           </div>
           <ul class="flex work-list">
             <div class="flex">
-              <li class="link work01"><a href="#">1</a></li>
-              <li class="link work02"><a href="#">2</a></li>
-              <li class="link work03"><a href="#">3</a></li>
-              <li class="link work04"><a href="#">4</a></li>
-              <li class="link work05"><a href="#">5</a></li>
-              <li class="link work06"><a href="#">6</a></li>
-              <li class="link work07"><a href="#">7</a></li>
-              <li class="link work08"><a href="#">8</a></li>
-              <li class="link work09"><a href="#">9</a></li>
-              <li class="link work10"><a href="#">10</a></li>
-              <li class="link work11"><a href="#">11</a></li>
-              <li class="link work12"><a href="#">12</a></li>
-              <li class="link work13"><a href="#">13</a></li>
+              <li class="link work01">
+                <a href="#">
+                  <div class="list-title">
+                    <h3>GENTLE MONSTER</h3>
+                    <p>01/14</p>
+                  </div>
+                  <div class="img-box img01"></div>
+
+                </a>
+              </li>
+              <li class="link work02">
+                <a href="#">
+                  <div class="img-box img02">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>HEINEKEN</h3>
+                    <p>02/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work03">
+                <a href="#">
+                  <div class="img-box img03">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>MARIO</h3>
+                    <p>03/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work04">
+                <a href="#">
+                  <div class="img-box img04"></div>
+                  <div class="list-title">
+                    <h3>APPLE</h3>
+                    <p>04/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work05">
+                <a href="#">
+                  <div class="img-box img05">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>ACE BED</h3>
+                    <p>05/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work06">
+                <a href="#">
+                  <div class="img-box img06">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>LOTTE</h3>
+                    <p>06/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work07">
+                <a href="#">
+                  <div class="img-box img07">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>YG</h3>
+                    <p>07/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work08">
+                <a href="#">
+                  <div class="img-box img08">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>CHEONGWADAE</h3>
+                    <p>08/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work09">
+                <a href="#">
+                  <div class="img-box img09">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>GENESIS</h3>
+                    <p>09/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work10">
+                <a href="#">
+                  <div class="img-box img10">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>DISNEY</h3>
+                    <p>10/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work11">
+                <a href="#">
+                  <div class="img-box img11">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>BANYANTREE</h3>
+                    <p>11/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work12">
+                <a href="#">
+                  <div class="img-box img12">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>POLO</h3>
+                    <p>12/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work13">
+                <a href="#">
+                  <div class="img-box img13">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>CHANEL</h3>
+                    <p>13/14</p>
+                  </div>
+                </a>
+              </li>
+              <li class="link work14">
+                <a href="#">
+                  <div class="img-box img14">
+
+                  </div>
+                  <div class="list-title">
+                    <h3>NEXON</h3>
+                    <p>14/14</p>
+                  </div>
+                </a>
+              </li>
             </div>
           </ul>
         </div>
@@ -328,7 +494,7 @@
         <div class="sticky">
           <div class="desc">
             <h2>디자인과 기술의 조화를 통해<br> 사용자에게
-              특별한 <span style="font-weight: 500;">빛</span>을 전하는<br>  웹 퍼블리셔가 되겠습니다.</h2>
+              특별한 <span style="font-weight: 500;">빛</span>을 전하는<br> 웹 퍼블리셔가 되겠습니다.</h2>
             <p>저는 디자인과를 졸업하며 시각적 아름다움을 창조하는 데서 큰 보람을 느꼈습니다.<br>
               웹이라는 무한한 가능성을 발견하게 되었고, 자연스럽게 웹 퍼블리셔라는 목표를 품게 되었습니다.<br>
               HTML로 구조를 세우고, CSS로 그 구조에 디자인을 입히며, JavaScript로 상호작용을 더하는 과정은<br>
@@ -376,10 +542,10 @@
               <li class="side kor">창의적인</li>
               <li class="bottom" style="font-weight: bold;">JAVASCRIPT</li>
             </ul>
-           
+
           </div>
         </div>
-        </div>
+      </div>
     </section>
     <section id="introduce" data-bg="#ffffff">
       <div class="inner">
