--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#project">project</a></li>
           <li><a href="#work">work</a></li>
           <li><a href="#about">about</a></li>
-          <li><a href="#c">contact</a></li>
+          <li><a href="#introduce">contact</a></li>
         </ul>
       </nav>
       <div class="header__nav_mobile" id="headerToggle" aria-controls="primary-menu" aria-expanded="flase"
@@ -223,8 +223,9 @@
                   </div>
                 </a>
               </li>
-              <li><a href="#" class="on">
-                  <p>마리오 게임의 특징을 살리며 
+              <li>
+                <a href="#" class="on">
+                  <p>마리오 게임의 특징을 살리며
                     만든 사이트입니다.
                   </p>
                   <div class="summary">
@@ -235,7 +236,8 @@
                       <img src="./src/assets/computer.png" alt="">
                     </div>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li>
                 <a href="#">
                   <p>아코디언페이지 구성으로 재해석한 사이트입니다. </p>
@@ -248,11 +250,11 @@
                   <p>swiper, jquery, vanilla script로<br> 클론코딩 하였습니다.</p>
                   <div class="summary">
                     <b>js / Clone / Swiper / 반응형</b>
-                    <ul class="flex">
-                      <li><img src="./src/assets/phone.png" alt=""></li>
-                      <li><img src="./src/assets/tablet.png" alt=""></li>
-                      <li><img src="./src/assets/computer.png" alt=""></li>
-                    </ul>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a></li>
               <li><a href="#">
@@ -266,37 +268,50 @@
                   <div class="summary"><b>jquery / Grid</b>
                   </div>
                 </a></li>
-              <li><a href="#">
-                  <p>CHEONGWADAE</p>
-                  <div class="summary"><b>jquery / 반응형</b>
+              <li>
+                <a href="#">
+                  <p>swiper을 사용하여 자바스크립트로 fullpage를 구현하였습니다.</p>
+                  <div class="summary">
+                    <b>jquery / 반응형</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a></li>
+                </a>
+              </li>
               <li><a href="#">
-                  <p>GENESIS</p>
+                  <p>mCustomscroll을 사용하고, 컨텐츠가 가로로 이동하도록 만든 사이트입니다.</p>
                   <div class="summary"><b>jquery / Cube / Swiper</b>
                   </div>
                 </a>
               </li>
               <li><a href="#">
-                  <p>DISNEY</p>
+                  <p>background, transform, swiper을 이용하여 여러 요소가 hover하면 움직이도록 만든 사이트입니다.</p>
                   <div class="summary"><b>jquery / Cube / Swiper</b>
                   </div>
                 </a>
               </li>
               <li><a href="#">
-                  <p>BANYANTREE</p>
+                  <p>jquery animate callback으로 만든 사이트입니다.</p>
                   <div class="summary"><b>jquery</b>
                   </div>
                 </a></li>
               <li><a href="#">
-                  <p>POLO</p>
+                  <p>sticky를 이용하여 상품들을 소개 하였습니다.</p>
                   <div class="summary"><b>반응형 / sticky</b>
                   </div>
                 </a>
               </li>
               <li><a href="#">
-                  <p>CHANEL</p>
+                  <p>pc, tablet, mobile 세가지 반응형으로 만든 사이트입니다.</p>
                   <div class="summary"><b>반응형</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -311,155 +326,274 @@
           <ul class="flex work-list">
             <div class="flex">
               <li class="link work01">
-                <a href="#">
-                  <div class="list-title">
-                    <h3>GENTLE MONSTER</h3>
-                    <p>01/14</p>
-                  </div>
+                <div>
                   <div class="img-box img01"></div>
-
-                </a>
+                  <div class="list-title">
+                    <div class="date">
+                      <h3>GENTLE MONSTER</h3>
+                      <p>01/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
+                  </div>
+                  <div class="explanation">
+                    <p class="br">젠틀몬스터의 선글라스 제품을 소개하는 페이지로<br> cube를 활용한 레이아웃입니다.</p>
+                    <div class="summary">
+                      <b>jquery / Cube / Swiper</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work02">
-                <a href="#">
+                <div>
                   <div class="img-box img02">
-
                   </div>
                   <div class="list-title">
-                    <h3>HEINEKEN</h3>
-                    <p>02/14</p>
+                    <div class="date">
+                      <h3>HEINEKEN</h3>
+                      <p>02/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>skew를 활용해 메뉴를 만들고<br> 리디자인한 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work03">
-                <a href="#">
+                <div>
                   <div class="img-box img03">
-
                   </div>
-                  <div class="list-title">
-                    <h3>MARIO</h3>
-                    <p>03/14</p>
+                  <div class="list-title
+                   flex">
+                    <div class="date">
+                      <h3>MARIO</h3>
+                      <p>03/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>마리오 게임의 특징을 살리며
+                      만든 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work04">
-                <a href="#">
+                <div>
                   <div class="img-box img04"></div>
                   <div class="list-title">
-                    <h3>APPLE</h3>
-                    <p>04/14</p>
+                    <div class="date">
+                      <h3>APPLE</h3>
+                      <p>04/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>아코디언페이지 구성으로 재해석한 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work05">
-                <a href="#">
+                <div>
                   <div class="img-box img05">
-
                   </div>
                   <div class="list-title">
-                    <h3>ACE BED</h3>
-                    <p>05/14</p>
+                    <div class="date">
+                      <h3>ACE BED</h3>
+                      <p>05/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>swiper, jquery, vanilla script로<br> 클론코딩 하였습니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work06">
-                <a href="#">
+                <div>
                   <div class="img-box img06">
 
                   </div>
                   <div class="list-title">
-                    <h3>LOTTE</h3>
-                    <p>06/14</p>
+                    <div class="date">
+                      <h3>LOTTE</h3>
+                      <p>06/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>롯데칠성음료 홈페이지의 일부를 클론 코딩하였습니다. 음료를 클릭하면 그에 대한 정보들이 나옵니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work07">
-                <a href="#">
+                <div>
                   <div class="img-box img07">
-
                   </div>
                   <div class="list-title">
-                    <h3>YG</h3>
-                    <p>07/14</p>
+                    <div class="date">
+                      <h3>YG</h3>
+                      <p>07/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>grid를 활용한 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work08">
-                <a href="#">
+                <div>
                   <div class="img-box img08">
-
                   </div>
                   <div class="list-title">
-                    <h3>CHEONGWADAE</h3>
-                    <p>08/14</p>
+                    <div class="date">
+                      <h3>CHEONGWADAE</h3>
+                      <p>08/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>swiper을 사용하여 자바스크립트로 fullpage를 구현하였습니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work09">
-                <a href="#">
+                <div>
                   <div class="img-box img09">
-
                   </div>
                   <div class="list-title">
-                    <h3>GENESIS</h3>
-                    <p>09/14</p>
+                    <div class="date">
+                      <h3>GENESIS</h3>
+                      <p>09/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>mCustomscroll을 사용하고, 컨텐츠가 가로로 이동하도록 만든 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work10">
-                <a href="#">
+                <div>
                   <div class="img-box img10">
-
                   </div>
                   <div class="list-title">
-                    <h3>DISNEY</h3>
-                    <p>10/14</p>
+                    <div class="date">
+                      <h3>DISNEY</h3>
+                      <p>10/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>background, transform, swiper을 이용하여 여러 요소가 hover하면 움직이도록 만든 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work11">
-                <a href="#">
+                <div>
                   <div class="img-box img11">
-
                   </div>
                   <div class="list-title">
-                    <h3>BANYANTREE</h3>
-                    <p>11/14</p>
+                    <div class="date">
+                      <h3>BANYANTREE</h3>
+                      <p>11/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>jquery animate callback으로 만든 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work12">
-                <a href="#">
+                <div>
                   <div class="img-box img12">
-
                   </div>
                   <div class="list-title">
-                    <h3>POLO</h3>
-                    <p>12/14</p>
+                    <div class="date">
+                      <h3>POLO</h3>
+                      <p>12/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>position과 grid를 이용하여 상품들을 소개 하였습니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work13">
-                <a href="#">
+                <div>
                   <div class="img-box img13">
-
                   </div>
                   <div class="list-title">
-                    <h3>CHANEL</h3>
-                    <p>13/14</p>
+                    <div class="date">
+                      <h3>CHANEL</h3>
+                      <p>13/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>pc, tablet, mobile 세가지 반응형으로 만든 사이트입니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
               <li class="link work14">
-                <a href="#">
+                <div>
                   <div class="img-box img14">
-
                   </div>
                   <div class="list-title">
-                    <h3>NEXON</h3>
-                    <p>14/14</p>
+                    <div class="date">
+                      <h3>NEXON</h3>
+                      <p>14/14</p>
+                    </div>
                   </div>
-                </a>
+                  <div class="explanation">
+                    <p>swiper, jquery, vanilla script로<br> 클론코딩 하였습니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
               </li>
             </div>
           </ul>
@@ -601,6 +735,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_right_alt"
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
   <script type="module" src="/main.js"></script>
 
 
