--- a/index.html
+++ b/index.html
@@ -214,12 +214,19 @@
                   <p class="br">젠틀몬스터의 선글라스 제품을 소개하는 페이지로<br> cube를 활용한 레이아웃입니다.</p>
                   <div class="summary">
                     <b>jquery / Cube / Swiper</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
               <li><a href="#">
                   <p>skew를 활용해 메뉴를 만들고<br> 리디자인한 사이트입니다.</p>
-                  <div class="summary"><b>transform</b>
+                  <div class="summary">
+                    <b>transform</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -243,6 +250,9 @@
                   <p>아코디언페이지 구성으로 재해석한 사이트입니다. </p>
                   <div class="summary">
                     <b>js / accordion / Swiper</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -258,8 +268,23 @@
                   </div>
                 </a></li>
               <li><a href="#">
+                  <p>yes24 홈페이지를 클론코딩 하였습니다.</p>
+                  <div class="summary">
+                    <b>js / Clone</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
+
+                  </div>
+                </a>
+              </li>
+              <li><a href="#">
                   <p>롯데칠성음료 홈페이지의 일부를 클론 코딩하였습니다. 음료를 클릭하면 그에 대한 정보들이 나옵니다.</p>
-                  <div class="summary"><b>js / Clone</b>
+                  <div class="summary">
+                    <b>js / Clone</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -433,6 +458,28 @@
               <li class="link work06">
                 <div>
                   <div class="img-box img06">
+                  </div>
+                  <div class="list-title">
+                    <div class="date">
+                      <h3>YES 24</h3>
+                      <p>05/14</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
+                  </div>
+                  <div class="explanation">
+                    <p>swiper, jquery, vanilla script로<br> 클론코딩 하였습니다.</p>
+                    <div class="summary"><b>transform</b>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="link work07">
+                <div>
+                  <div class="img-box img07">
 
                   </div>
                   <div class="list-title">
@@ -451,9 +498,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work07">
+              <li class="link work08">
                 <div>
-                  <div class="img-box img07">
+                  <div class="img-box img08">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -471,9 +518,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work08">
+              <li class="link work09">
                 <div>
-                  <div class="img-box img08">
+                  <div class="img-box img09">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -493,9 +540,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work09">
+              <li class="link work10">
                 <div>
-                  <div class="img-box img09">
+                  <div class="img-box img10">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -510,9 +557,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work10">
+              <li class="link work11">
                 <div>
-                  <div class="img-box img10">
+                  <div class="img-box img11">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -527,9 +574,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work11">
+              <li class="link work12">
                 <div>
-                  <div class="img-box img11">
+                  <div class="img-box img12">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -544,9 +591,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work12">
+              <li class="link work13">
                 <div>
-                  <div class="img-box img12">
+                  <div class="img-box img13">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -561,9 +608,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work13">
+              <li class="link work14">
                 <div>
-                  <div class="img-box img13">
+                  <div class="img-box img14">
                   </div>
                   <div class="list-title">
                     <div class="date">
@@ -578,9 +625,9 @@
                   </div>
                 </div>
               </li>
-              <li class="link work14">
+              <li class="link work15">
                 <div>
-                  <div class="img-box img14">
+                  <div class="img-box img15">
                   </div>
                   <div class="list-title">
                     <div class="date">
