--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="on">
+                <a href="#">
                   <p>마리오 게임의 특징을 살리며
                     만든 사이트입니다.
                   </p>
@@ -290,7 +290,11 @@
               </li>
               <li><a href="#">
                   <p>grid를 활용한 사이트입니다.</p>
-                  <div class="summary"><b>jquery / Grid</b>
+                  <div class="summary">
+                    <b>jquery / Grid</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a></li>
               <li>
@@ -309,23 +313,40 @@
               <li><a href="#">
                   <p>mCustomscroll을 사용하고, 컨텐츠가 가로로 이동하도록 만든 사이트입니다.</p>
                   <div class="summary"><b>jquery / Cube / Swiper</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
               <li><a href="#">
                   <p>background, transform, swiper을 이용하여 여러 요소가 hover하면 움직이도록 만든 사이트입니다.</p>
-                  <div class="summary"><b>jquery / Cube / Swiper</b>
+                  <div class="summary">
+                    <b>jquery / Cube / Swiper</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
               <li><a href="#">
                   <p>jquery animate callback으로 만든 사이트입니다.</p>
-                  <div class="summary"><b>jquery</b>
+                  <div class="summary">
+                    <b>jquery</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a></li>
               <li><a href="#">
                   <p>sticky를 이용하여 상품들을 소개 하였습니다.</p>
-                  <div class="summary"><b>반응형 / sticky</b>
+                  <div class="summary">
+                    <b>반응형 / sticky</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -342,7 +363,13 @@
               </li>
               <li><a href="#">
                   <p>GSAP</p>
-                  <div class="summary"><b>반응형</b>
+                  <div class="summary">
+                    <b>반응형</b>
+                    <div class="flex icon">
+                      <img src="./src/assets/phone.png" alt="">
+                      <img src="./src/assets/tablet.png" alt="">
+                      <img src="./src/assets/computer.png" alt="">
+                    </div>
                   </div>
                 </a>
               </li>
@@ -356,7 +383,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>GENTLE MONSTER</h3>
-                      <p>01/14</p>
+                      <p>01/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/computer.png" alt="">
@@ -377,7 +404,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>HEINEKEN</h3>
-                      <p>02/14</p>
+                      <p>02/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/computer.png" alt="">
@@ -398,7 +425,7 @@
                    flex">
                     <div class="date">
                       <h3>MARIO</h3>
-                      <p>03/14</p>
+                      <p>03/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/phone.png" alt="">
@@ -420,7 +447,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>APPLE</h3>
-                      <p>04/14</p>
+                      <p>04/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/computer.png" alt="">
@@ -440,7 +467,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>ACE BED</h3>
-                      <p>05/14</p>
+                      <p>05/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/phone.png" alt="">
@@ -462,7 +489,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>YES 24</h3>
-                      <p>05/14</p>
+                      <p>06/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/phone.png" alt="">
@@ -485,7 +512,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>LOTTE</h3>
-                      <p>06/14</p>
+                      <p>07/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/computer.png" alt="">
@@ -505,7 +532,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>YG</h3>
-                      <p>07/14</p>
+                      <p>08/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/computer.png" alt="">
@@ -525,7 +552,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>CHEONGWADAE</h3>
-                      <p>08/14</p>
+                      <p>09/15</p>
                     </div>
                     <div class="flex icon">
                       <img src="./src/assets/phone.png" alt="">
@@ -547,7 +574,10 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>GENESIS</h3>
-                      <p>09/14</p>
+                      <p>10/15</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
                     </div>
                   </div>
                   <div class="explanation">
@@ -564,7 +594,10 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>DISNEY</h3>
-                      <p>10/14</p>
+                      <p>11/15</p>
+                    </div>
+                    <div class="flex icon">
+                      <img src="./src/assets/computer.png" alt="">
                     </div>
                   </div>
                   <div class="explanation">
@@ -581,7 +614,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>BANYANTREE</h3>
-                      <p>11/14</p>
+                      <p>12/15</p>
                     </div>
                   </div>
                   <div class="explanation">
@@ -598,7 +631,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>POLO</h3>
-                      <p>12/14</p>
+                      <p>13/15</p>
                     </div>
                   </div>
                   <div class="explanation">
@@ -615,7 +648,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>CHANEL</h3>
-                      <p>13/14</p>
+                      <p>14/15</p>
                     </div>
                   </div>
                   <div class="explanation">
@@ -632,7 +665,7 @@
                   <div class="list-title">
                     <div class="date">
                       <h3>NEXON</h3>
-                      <p>14/14</p>
+                      <p>15/15</p>
                     </div>
                   </div>
                   <div class="explanation">
@@ -775,7 +808,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
 "></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link
@@ -783,6 +816,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
+  <script src="/src/js/splitText.js"></script>
   <script type="module" src="/main.js"></script>
 
 
