--- a/index.html
+++ b/index.html
@@ -379,15 +379,17 @@
             <div class="flex">
               <li class="link work01">
                 <div>
-                  <div class="img-box img01"></div>
-                  <div class="list-title">
-                    <div class="date">
-                      <h3>GENTLE MONSTER</h3>
-                      <p>01/15</p>
-                    </div>
-                    <div class="flex icon">
-                      <img src="./src/assets/computer.png" alt="">
-                    </div>
+                  <a href="#">
+                    <div class="img-box img01"></div>
+                    <div class="list-title">
+                      <div class="date">
+                        <h3>GENTLE MONSTER</h3>
+                        <p>01/15</p>
+                      </div>
+                      <div class="flex icon">
+                        <img src="./src/assets/computer.png" alt="">
+                      </div>
+                  </a>
                   </div>
                   <div class="explanation">
                     <p class="br">젠틀몬스터의 선글라스 제품을 소개하는 페이지로<br> cube를 활용한 레이아웃입니다.</p>
