--- a/index.html
+++ b/index.html
@@ -818,8 +818,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.umd.min.js"></script>
-  <script src="/src/js/splitText.js"></script>
-  <script type="module" src="/main.js"></script>
+
+  <script type="module" src="./main.js"></script>
 
 
 </body>
